# dental-management-platform

./: .gitignore  README.md  pyproject.toml
api/: serializers.py  urls.py  views.py
clinics/: models.py  views.py
components/add-clinic-form/: add-clinic-form.py  script.js  template.html
components/add-doctor-form/: add-doctor-form.py  script.js  template.html
components/add-patient-form/: add-patient-form.py  script.js  template.html
components/affiliation-form/: affiliation-from.py  script.js  template.html
components/clinic-card/: clinic-card.py  script.js  template.html
components/clinic-doctor-card/: clinic-doctor-card.py  script.js  template.html
components/clinic-form/: clinic-form.py  script.js  template.html
components/doctor-card/: doctor-card.py  script.js  template.html
components/doctor-clinic-card/: doctor-clinic-card.py  script.js  template.html
components/doctor-form/: doctor-form.py  script.js  template.html
components/doctor-patient-card/: doctor-patient-card.py  template.html
components/navbar/: navbar.py  template.html
components/navbarlink/: navbarlink.py  template.html
components/page-heading/: page-heading.py  template.html
components/patient-appointment-card/: patient-appointment-card.py  script.js  template.html
components/patient-card/: patient-card.py  script.js  template.html
components/patient-form/: patient-form.py  script.js  template.html
components/schedule-form/: script.js  (+2 more)
core/: settings.py  urls.py
service/: admin.py  errors.py  interface.py  models.py
web/: middleware.py  urls.py  views.py
(+34 files in other folders)
