[tool.poetry]
name = "dental-management-platform"
version = "0.1.0"
description = ""
authors = ["Shubham Chawla <shubham_chawla@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
djangorestframework = "^3.15.2"
django-components = "^0.101"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
